fix: actually save cropped image

--- a/web/src/components/reviews/reviews.css
+++ b/web/src/components/reviews/reviews.css
@@ -31,7 +31,7 @@
 }
 
 .form-button {
-    @apply rounded bg-blue-500 px-4 py-2 font-bold text-white hover:bg-blue-700 focus:outline-none;
+    @apply w-3/5 rounded bg-blue-500 px-4 py-2 font-bold text-white hover:bg-blue-700 focus:outline-none;
 }
 
 .form-label {
